feat(department): add GetDepartmentsByCompanyIDAuth handler and update API document
